WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221714
We should not static_assert on an ENABLE() macro.
https://bugs.webkit.org/show_bug.cgi?id=221714
Summary
We should not static_assert on an ENABLE() macro.
Mark Lam
Reported
2021-02-10 13:48:36 PST
This is because the ENABLE() macro reduces to a macro expression `(defined ENABLE_##WTF_FEATURE && ENABLE_##WTF_FEATURE)` which is not a C++ expression that a static_assert can evaluate.
rdar://74197896
Attachments
proposed patch.
(3.59 KB, patch)
2021-02-10 13:53 PST
,
Mark Lam
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2021-02-10 13:53:29 PST
Created
attachment 419897
[details]
proposed patch.
Yusuke Suzuki
Comment 2
2021-02-10 13:55:58 PST
Comment on
attachment 419897
[details]
proposed patch. r=me
Mark Lam
Comment 3
2021-02-10 14:01:40 PST
Thanks for the review. Landed in
r272685
: <
http://trac.webkit.org/r272685
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug