Cherry-pick r272685. rdar://problem/74410538

We should not static_assert on an ENABLE() macro.
    https://bugs.webkit.org/show_bug.cgi?id=221714
    rdar://74197896

    Reviewed by Yusuke Suzuki.

    This is because the ENABLE() macro reduces to a macro expression
    `(defined ENABLE_##WTF_FEATURE && ENABLE_##WTF_FEATURE)` which is not a C++
    expression that a static_assert can evaluate.

    * llint/LLIntData.cpp:
    * llint/LLIntData.h:
    (JSC::LLInt::getCodePtr):
    (JSC::LLInt::getWide16CodePtr):
    (JSC::LLInt::getWide32CodePtr):

    Canonical link: https://commits.webkit.org/233936@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272685 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.201@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@272961 268f45cc-cd09-0410-ab3c-d52691b4dbfc