Source/JavaScriptCore/llint/LLIntData.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2011-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2011-2021 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -155,6 +155,10 @@ ALWAYS_INLINE MacroAssemblerCodePtr<tag> getCodePtrImpl(const Opcode opcode, con
     return MacroAssemblerCodePtr<tag>::createFromExecutableAddress(retaggedOpcode);
 }
 
+#if ENABLE(ARM64E) && !ENABLE(COMPUTED_GOTO_OPCODES)
+#error ENABLE(ARM64E) requires ENABLE(COMPUTED_GOTO_OPCODES) for getCodePtr (and its variants).
+#endif
+
 template<PtrTag tag>
 ALWAYS_INLINE MacroAssemblerCodePtr<tag> getCodePtr(OpcodeID opcodeID)
 {
@@ -162,7 +166,6 @@ ALWAYS_INLINE MacroAssemblerCodePtr<tag> getCodePtr(OpcodeID opcodeID)
     const Opcode* opcode = getOpcodeAddress(opcodeID);
     return getCodePtrImpl<tag>(*opcode, opcode);
 #else
-    static_assert(!ENABLE(ARM64E));
     return getCodePtrImpl<tag>(getOpcode(opcodeID), nullptr);
 #endif
 }
@@ -174,7 +177,6 @@ ALWAYS_INLINE MacroAssemblerCodePtr<tag> getWide16CodePtr(OpcodeID opcodeID)
     const Opcode* opcode = getOpcodeWide16Address(opcodeID);
     return getCodePtrImpl<tag>(*opcode, opcode);
 #else
-    static_assert(!ENABLE(ARM64E));
     return getCodePtrImpl<tag>(getOpcodeWide16(opcodeID), nullptr);
 #endif
 }
@@ -186,7 +188,6 @@ ALWAYS_INLINE MacroAssemblerCodePtr<tag> getWide32CodePtr(OpcodeID opcodeID)
     const Opcode* opcode = getOpcodeWide32Address(opcodeID);
     return getCodePtrImpl<tag>(*opcode, opcode);
 #else
-    static_assert(!ENABLE(ARM64E));
     return getCodePtrImpl<tag>(getOpcodeWide32(opcodeID), nullptr);
 #endif
 }
@@ -295,7 +296,6 @@ ALWAYS_INLINE MacroAssemblerCodePtr<tag> getCodePtr(WasmOpcodeID opcodeID)
     const Opcode* opcode = getOpcodeAddress(opcodeID);
     return getCodePtrImpl<tag>(*opcode, opcode);
 #else
-    static_assert(!ENABLE(ARM64E));
     return getCodePtrImpl<tag>(getOpcode(opcodeID), nullptr);
 #endif
 }
@@ -307,7 +307,6 @@ ALWAYS_INLINE MacroAssemblerCodePtr<tag> getWide16CodePtr(WasmOpcodeID opcodeID)
     const Opcode* opcode = getOpcodeWide16Address(opcodeID);
     return getCodePtrImpl<tag>(*opcode, opcode);
 #else
-    static_assert(!ENABLE(ARM64E));
     return getCodePtrImpl<tag>(getOpcodeWide16(opcodeID), nullptr);
 #endif
 }
@@ -319,7 +318,6 @@ ALWAYS_INLINE MacroAssemblerCodePtr<tag> getWide32CodePtr(WasmOpcodeID opcodeID)
     const Opcode* opcode = getOpcodeWide32Address(opcodeID);
     return getCodePtrImpl<tag>(*opcode, opcode);
 #else
-    static_assert(!ENABLE(ARM64E));
     return getCodePtrImpl<tag>(getOpcodeWide32(opcodeID), nullptr);
 #endif
 }
